fix faq title whitespace

--- a/website/public/scss/site/_title.scss
+++ b/website/public/scss/site/_title.scss
@@ -4,7 +4,6 @@
     background: url('../images/landing/title-bg.png') no-repeat center center;
     background-size: 100%;
     margin-bottom: 25px;
-    white-space: nowrap;
 }
 
 .section {
@@ -12,6 +11,10 @@
         padding: 0 40px;
         margin-bottom: 25px;
     }
+}
+
+.container > .title {
+    white-space: nowrap;
 }
 
 .major-header.-title {
