--- a/website/public/styles/site.css
+++ b/website/public/styles/site.css
@@ -5884,12 +5884,14 @@ h6 {
   color: #ffffff;
   background: url("../images/landing/title-bg.png") no-repeat center center;
   background-size: 100%;
-  margin-bottom: 25px;
-  white-space: nowrap; }
+  margin-bottom: 25px; }
 
 .section > .title {
   padding: 0 40px;
   margin-bottom: 25px; }
+
+.container > .title, .section > .title, .first-section > .title, .about-section > .title, .register-section > .title, .contact-section > .title, .sponsor-section > .title, .gallery-section > .title, .gallery-container > .title, .faq-section > .title, .faq-container > .title {
+  white-space: nowrap; }
 
 .major-header.-title {
   text-transform: uppercase;
